springboot 3.0.2 upgrade. Adding github actions. Lowering resource requirements.